--- a/0911.0058/thesis2.tex
+++ b/0911.0058/thesis2.tex
@@ -1,17 +1,11 @@
 %environment setup
-\documentclass[a4paper,12pt]{book}
+\documentclass[12pt]{book}
 
 %lscape package allows pages in `landscape' format
 \usepackage{lscape}
 
 %tikz package is front-end for pgf, which is used for graphics
 \usepackage{tikz}
-
-\usepackage{geometry}
-
-\geometry{left=2in,right=1.5in,top=1.3in,bottom=1.3in}
-
-
 
 %for pictures
 \usepackage{graphicx}
@@ -20,7 +14,7 @@
 \usepackage{verbatim}
 
 %to allow interior and exterior references. this should be final package before opening
-\usepackage{hyperref}
+%\usepackage{hyperref}
 
 %fancy letters
 \usepackage{euscript}
@@ -31,7 +25,46 @@
 %for appendices
 \usepackage{appendix}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\date{31 Oct 2009}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %suppress the words "Chapter X" where X is a number at beginning of chapters 
 \makeatletter
 \renewcommand{\@makechapterhead}[1]{%
@@ -166,7 +199,7 @@ Dr. Milind Purohit\\
 %
 % Bottom of the page
 % \today is the compilation date
-{\large \today}
+{\large 31 Oct 2009}
 %
 \end{center}
 
@@ -201,7 +234,7 @@ Dr. Milind Purohit\\
  \textit{“I think physicists are the Peter Pans of the human race. They never grow up and they keep their curiosity.”} - I.I. Rabi
 \end{quotation}
 
-\paragraph*{}\begin{Large}$\mathcal{I}$\end{Large}f one was to spend a few minutes observing the physical phenomena taking place all around them, one would come the conclusion that there are only two fundamental forces of nature, Gravitation and Electromagnetism. Just one century ago, this was the opinion held by the worldwide community of physicists. After many decades spent digging deeper and deeper into the heart of matter, two brand new types of interactions were identified, impelling us to add the Strong and Weak nuclear forces to this list. Of these two new forces, the Weak has done the most to shatter long-held beliefs and to ultimately guide us towards a deeper understanding of our universe. 
+If one was to spend a few minutes observing the physical phenomena taking place all around them, one would come the conclusion that there are only two fundamental forces of nature, Gravitation and Electromagnetism. Just one century ago, this was the opinion held by the worldwide community of physicists. After many decades spent digging deeper and deeper into the heart of matter, two brand new types of interactions were identified, impelling us to add the Strong and Weak nuclear forces to this list. Of these two new forces, the Weak has done the most to shatter long-held beliefs and to ultimately guide us towards a deeper understanding of our universe. 
 
 In this work we will trace the history of our understanding of the weak force from early observations and explanations of $\beta$ decay all the way to the doorstep of Electroweak unification, one of the greatest accomplishments of modern physics. In the process we will encounter some of the greatest minds of the last century and try to understand the significance of some of their work.
 
@@ -218,7 +251,7 @@ The final chapter attempts to generalize the Fermi theory which was originally d
 
 \chapter{A New Force}
 
-\paragraph*{}\begin{Large}$\mathcal{B}$\end{Large}y the end of the 1920's it was clear that there was something peculiar about $\beta$ decay. Coming off of a decade which had seen tremendous success in the development of quantum mechanics, physicists were now faced with another perplexing conundrum. Experimental evidence contradicted the prevailing ideas about $\beta$ decays and desperate attempts to salvage the theory had to be made.
+By the end of the 1920's it was clear that there was something peculiar about $\beta$ decay. Coming off of a decade which had seen tremendous success in the development of quantum mechanics, physicists were now faced with another perplexing conundrum. Experimental evidence contradicted the prevailing ideas about $\beta$ decays and desperate attempts to salvage the theory had to be made.
 
 $\beta$ rays were one of the three types of radiation observed in the final years of the nineteenth century, the others being $\alpha$ and $\gamma$ rays. These forms of radiation were indicative of different transformations of their mother nuclei: $\alpha$ and $\beta$ rays were emitted by nuclei which changed their electric charge (and thus transformed into the nuclei of a different element) while $\gamma$ rays were emitted by excited nuclei in order to drop to their ground state\footnote{This is analagous to the process by which electrons drop to the ground state in the system of atomic orbitals.}. The energy spectra of $\alpha$ and $\gamma$ rays were discrete, i.e. these rays could only have certain fixed energies. Against all expectations $\beta$ rays were observed to have a \emph{continuous} energy spectrum by James Chadwick in 1914. This observation would weigh on the minds of physicists for many years and would eventually lead to the Fermi Theory, the first theory of the Weak force.
 
@@ -274,9 +307,9 @@ that the sum of the energies of neutron and electron is constant.
 
 Now it is also a question of which forces act upon neutrons. For me, the most likely model for the
 neutron seems to be, for wave-mechanical reasons (the bearer of these lines knows more), that the
-neutron at rest is a magnetic dipole with a certain moment μ. The experiments seem to require
+neutron at rest is a magnetic dipole with a certain moment $\mu$. The experiments seem to require
 that the ionizing effect of such a neutron can not be bigger than the one of a gamma-ray, and then
-μ is probably not allowed to be larger than $10^{-13}$cm.
+$\mu$ is probably not allowed to be larger than $10^{-13}$cm.
 But so far I do not dare to publish anything about this idea, and trustfully turn first to you, dear
 radioactive people, with the question of how likely it is to find experimental evidence for such a
 neutron if it would have the same or perhaps a 10 times larger ability to get through [material]
@@ -511,12 +544,12 @@ Fermi's theory, while representing a significant step in the right direction, ha
 
 \chapter{Parity Violation}
 
-\paragraph{}\begin{Large}$\mathcal{S}$\end{Large}ome natural symmetries seem so intuitively obvious that they are never really mentioned in any serious context. Prior to the 1950's, this was the attitude that much of the physics community had towards mirror-image symmetry. Dirac, when asked to comment on the downfall of this principle, expressed the attitude of many of his contemporaries\cite{polkinghorne}: ``I never said anything about it in my book.'' The discovery of the blatant violation of this symmetry by the weak force has served as yet another warning to physicists not to put too much stock in their intuition when dealing with the subatomic world. 
+Some natural symmetries seem so intuitively obvious that they are never really mentioned in any serious context. Prior to the 1950's, this was the attitude that much of the physics community had towards mirror-image symmetry. Dirac, when asked to comment on the downfall of this principle, expressed the attitude of many of his contemporaries\cite{polkinghorne}: ``I never said anything about it in my book.'' The discovery of the blatant violation of this symmetry by the weak force has served as yet another warning to physicists not to put too much stock in their intuition when dealing with the subatomic world. 
 
 In physics \emph{symmetries} and \emph{conservation laws} are very closely related. The mathematician Emmy Noether, described by Albert Einstein as the most important woman in the history of Mathematics \cite{einstein}, first discovered this connection. Noether's theorem states that if a system behaves identically with regard to some type of transformation (i.e. its \emph{Lagrangian} $\mathcal{L}$ is symmetric with respect to some transformation), then there must exist a conserved quantity within the system which is associated with this symmetry.
 
 In order to illustrate this beautiful result, we consider a simple example. We imagine a system whose behavior is identical with respect to translations in a certain spatial direction, say along the direction parallel to the x-axis of our coordinate system. In other words, the system has exactly the same behavior at the position $\mathbf{r_{1}}=(x_{1},y_{1},z_{1})$ as it does at the position $\mathbf{r_{2}}=(x_{2},y_{1},z_{1})$ which has been translated from $\mathbf{r_{1}}$ along the x axis by a distance $\Delta x=x_{2}-x_{1}$. This is equivalent to the statement that the Lagrangian of the system, which gives a complete description of its behavior, is invariant with respect to translations along the x-axis. By Noether's theorem, we know that this symmetry implies some conservation law. It turns out that the conserved quantity associated with translations along x-axis is precisely that component of the momentum which lies parallel to this axis. Similarly, the conservation of momentum in the other two directions is simply a result of the symmetry of the laws of motion (and thus of the Lagrangian) with respect to translations in those directions \cite{Schumm}. Thus, through Noether's theorem, we find that all of our cherished conservation laws are simply consequences of the symmetries of our universe. Some of the most fundamental symmetries and their associated conservation laws are listed in Table ~\ref{sym_cons}.
-\begin{table}[symmetries]
+\begin{table}
 \caption{Symmetries and associated Conserved Quantities} % title name of the table
 \label{sym_cons}
 \centering                           % centering table
@@ -696,7 +729,7 @@ We complete our discussion of the startling discovery of parity violation with a
 
 \chapter{The Road to V-A Theory}
 
-\paragraph{}\begin{Large}$\mathcal{I}$\end{Large}n the previous chapter we discovered, through Madame Wu's extraordinary work, that the two deeply connected principles of reflection symmetry and parity conservation are violated by the weak force. In this chapter we return to the theoretical side of our story, generalizing the framework of Fermi theory described in Chapter 1 and observing its evolution into a much more precise model in the months following the ``overthrow of parity''. Let us first turn back to Fermi's original work of the early 1930's in order to come to grips with some of its subtleties, an understanding of which will serve us well further on in this chapter.
+In the previous chapter we discovered, through Madame Wu's extraordinary work, that the two deeply connected principles of reflection symmetry and parity conservation are violated by the weak force. In this chapter we return to the theoretical side of our story, generalizing the framework of Fermi theory described in Chapter 1 and observing its evolution into a much more precise model in the months following the ``overthrow of parity''. Let us first turn back to Fermi's original work of the early 1930's in order to come to grips with some of its subtleties, an understanding of which will serve us well further on in this chapter.
 
 \section{Fermi Theory Revisited}
 
