--- a/1110.2253/gerry-DPF2011-paper-v09.tex
+++ b/1110.2253/gerry-DPF2011-paper-v09.tex
@@ -2,67 +2,73 @@
 % BeGiN...
 % Time-stamp: <Last changed 2011-10-10 16:36:37 by Gerald Guralnik, gerry>
 %%%
-\documentclass[letterpaper,twoside,preprintnumbers,slac_one]{revtex4}
+\documentclass[preprintnumbers,12pt]{revtex4-2}
 \usepackage{graphicx}
-\usepackage{fancyhdr}
 \usepackage{amsmath} % American Mathematics Society standards
 \usepackage{bm}% bold math
 \usepackage{amsxtra}
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{latexsym}
-\usepackage{lscape}
 
-\pagestyle{fancy}
-\fancyhead{} % clear all fields
-\fancyhead[C]{\it {
-Proceedings of the DPF-2011 Conference, Providence, RI, August 8--13, 2011
-}} \fancyhead[RO,LE]{\thepage}
-\fancyfoot{} % clear all fields
-\fancyfoot[LE,LO]{}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{0pt}
-\renewcommand{\sfdefault}{phv}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 % \setlength{\textheight}{235mm}
 % \setlength{\textwidth}{170mm}
-\setlength{\topmargin}{1mm}
 %%
 %% Geometry of the paper and page structure...
 \usepackage{calc}   % working with lengths, counters etc.
-\usepackage[        %
-  includeheadfoot,  %
-  textheight=235mm, %
-  textwidth=170mm   %
-]{geometry}         % set page layout parameters
-%%
 
 \bibliographystyle{apsrev}
 
 %%%
 %% Preamble...
 \usepackage{xspace}
-\usepackage[colorlinks=true,urlcolor=blue,linktocpage=true]{hyperref}
-\usepackage{hyperref}
-\hypersetup{
-  pdftitle    = {Spontaneous Symmetry Breaking},
-  pdfauthor   = {Gerald S. Guralnik <gerry@het.brown.edu>},
-  pdfsubject  = {High Energy Physics - Theory},
-  pdfcreator  = {LaTeX2e with hyperref package},
-  pdfproducer = {pdflatex},
-  pdfkeywords = {Quantum Field Theory, Schwinger-Dyson Equations, Lattice,
-    Symmetry Breaking, Non-Perturbative QFT},
-  pdfview     = {FitH}
-}
 \usepackage{ucs}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{ae,aecompl}
-\usepackage{lmodern}
 \usepackage{microtype}
 \usepackage[x11names]{xcolor}
 \usepackage[american]{babel}
+\usepackage{lmodern}
+
 %
 %% Hooked Square Root sign...
 \def\hksqrt{\mathpalette\DHLhksqrt}
@@ -143,7 +149,6 @@ Institutional Report Number: BROWN-HET-1618.
 %\maketitle must follow title, authors, abstract
 \maketitle
 
-\thispagestyle{fancy}
 
 % body of paper here - Use proper section commands
 % References should be done using the \cite, \ref, and \label commands
