--- a/0907.3466/0907.3466.tex
+++ b/0907.3466/0907.3466.tex
@@ -6,8 +6,44 @@
 %%
 %% Preamble...
 %
-\usepackage[letterpaper,body={8in,11in},margin=1in]{geometry}
-%%
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}%%
 \usepackage{ucs}
 \usepackage[utf8x]{inputenc}
 %\usepackage[applemac]{inputenc}
@@ -23,36 +59,6 @@
 \usepackage[american]{babel}
 \usepackage{xspace}
 \usepackage{setspace}
-%
-\usepackage[colorlinks=true,urlcolor=blue]{hyperref}
-\usepackage{hyperref}
-\hypersetup{
-  pdftitle    = {Spontaneous Symmetry Breaking},
-  pdfauthor   = {Gerald S. Guralnik <gerry@het.brown.edu>},
-  pdfsubject  = {High Energy Physics - Theory},
-  pdfcreator  = {LaTeX2e with hyperref package},
-  pdfproducer = {pdflatex},
-  pdfkeywords = {Quantum Field Theory, Schwinger-Dyson Equations, Lattice,
-    Symmetry Breaking, Non-Perturbative QFT},
-  pdfview     = {FitH}
-}
-%% Fancy Headings...
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancypagestyle{plain}{%
-\fancyhf{} % clear all header and footer fields
-\fancyfoot[C]{\bfseries\thepage} % except the center
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{0pt}}
-\renewcommand{\sectionmark}[1]{\markboth{\thesection.\  #1}{}}
-\renewcommand{\sectionmark}[1]{\markright{\thesection.\ #1}}
-\renewcommand{\headrulewidth}{0.5pt}
-\newcommand{\helv}{%
-\fontfamily{phv}\fontseries{b}\fontsize{9}{11}\selectfont}
-\fancyhf{}
-\fancyhead[LE,RO]{\helv{\footnotesize \thepage}}
-\fancyhead[LO]{\helv{\footnotesize \rightmark}}
-\fancyhead[RE]{\helv{\footnotesize \leftmark}}
 %
 \usepackage{amsmath,amsfonts,amstext,amssymb,amsbsy,amsopn,amsthm,eucal}
 \DeclareMathAlphabet{\mathpzc}{T1}{pzc}{m}{it} % $\mathpzc{F}$: Fancy math font
@@ -147,6 +153,7 @@
   nonlinearity of non-trivial interactions.
 \end{abstract}
 
+\newpage
   \tableofcontents
 \end{titlepage}
 %---eNd---TitlePage---
