--- a/2010.06602/ReturnBU3.tex
+++ b/2010.06602/ReturnBU3.tex
@@ -1,8 +1,39 @@
 \documentclass[letterpaper,12pt]{article}
 \pdfoutput=1
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage{../helpers/jheppub}
+
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %
 %\usepackage{enumerate}
-\usepackage{jheppub}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{caption,subcaption}
@@ -17,8 +48,6 @@
 \usepackage{amsthm}
 
 \graphicspath{{./Figures/}}
-
-\setcounter{tocdepth}{2}
 
 \newenvironment{emphblock}%
   {\list{}{\leftmargin=0.22in\rightmargin=0.3in}\item[]}%
