--- a/quant-ph-0103041/quant-ph-0103041.tex
+++ b/quant-ph-0103041/quant-ph-0103041.tex
@@ -1,11 +1,51 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 % \renewcommand{\baselinestretch}{1.33}
 \usepackage{amssymb} 
 \usepackage{amsfonts} 
 \usepackage{amsthm}
 \usepackage{latexsym}
 \usepackage[T1]{fontenc}
-\usepackage{times}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \DeclareMathAlphabet{\mathib}{T1}{ptm}{b}{it}
 \newtheorem{prop}{Proposition}
 \newtheorem{cor}[prop]{Corollary}
