--- a/quant-ph-0001107/quant-ph-0001107.tex
+++ b/quant-ph-0001107/quant-ph-0001107.tex
@@ -59,7 +59,6 @@ bookmarksopenlevel=10
 \newcommand{\hil}[1]{\mbox{$\mathsf{#1}$}}
 \newcommand{\slim}{\mathrm{s\!\!-\!\!lim}}
 \newcommand{\twoqubit}{\mbox{$\mathbf{B}(\mathbb{C}^{n})\otimes{\mathbf{B}(\mathbb{C}}^{n})$}}
-\renewcommand{\thesection}{\Roman{section}.}
 \title{Entanglement and Open Systems in Algebraic Quantum Field Theory}
 \author{Rob Clifton and Hans Halvorson\footnote{Department of Philosophy,
  1001 Cathedral of
@@ -100,7 +99,7 @@ as single algebras are nearly void of physical meaning)'' Schroer
 (1998, p. 302).
 \end{quote}
    
- \section*{1. Introduction}
+\section{Introduction}
  
 In \emph{PCT, Spin and Statistics, and All That}, Streater and Wightman 
 claim that, as a consequence of the axioms of algebraic quantum 
@@ -353,7 +352,7 @@ way to make precise the sense in which AQFT requires a radical change
 in paradigm --- a change that, regrettably, has passed virtually
 unnoticed by philosophers of quantum theory. 
 
-\section*{2. AQFT, Entanglement, and Local Operations}
+\section{AQFT, Entanglement, and Local Operations}
 
  First, let us recall that an abstract
 $C^{*}$-algebra is a Banach $^{*}$-algebra, where the 
@@ -1011,8 +1010,7 @@ each of the states $\{\omega_{n}\}$ is again a convex combination of
 product states.  Hence $\rho^{K}|_{\alg{R}_{AB}}$ is not 
 entangled either.
 
-     \section*{3. The Operational Implications of the \\ Reeh-Schlieder 
-      Theorem}   
+\section{The Operational Implications of the Reeh-Schlieder Theorem}   
        
      Again, let $\alg{R}\subseteq\alg{B}(\hil{H})$ be any von Neumann 
      algebra.  A vector $x\in\hil{H}$ is called cyclic for $\alg{R}$ 
@@ -1539,7 +1537,7 @@ entanglement between bounded open spacetime regions
 assumptions about what should count as a 
 physically reasonable relativistic quantum field theory.
 
-\section*{4. Type III von Neumann Algebras and \\  Intrinsic Entanglement}
+\section{Type III von Neumann Algebras and Intrinsic Entanglement}
 
  Though it is not known to follow from the general axioms of AQFT 
  (cf. Kadison, 
