--- a/2102.05242/patterns.tex
+++ b/2102.05242/patterns.tex
@@ -2,6 +2,13 @@
 
 \usepackage{templates/macros}
 
+\sloppy
+\raggedbottom
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
 % DO NOT DELETE. Required by pandoc.
 % Pandoc citation processing
 \newlength{\csllabelwidth}
