--- a/1606.06065/1606.06065.tex
+++ b/1606.06065/1606.06065.tex
@@ -1,8 +1,49 @@
-\documentclass[11pt]{article}%
+\documentclass[12pt]{article}%
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}%
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \setcounter{MaxMatrixCols}{30}
 %TCIDATA{OutputFilter=latex2.dll}
 %TCIDATA{Version=5.50.0.2953}
@@ -39,6 +80,8 @@
 \newtheorem{solution}[theorem]{Solution}
 \newtheorem{summary}[theorem]{Summary}
 \newenvironment{proof}[1][Proof]{\noindent\textbf{#1.} }{\ \rule{0.5em}{0.5em}}
+
+\date{20 Jun 2016}
 \begin{document}
 
 \title{Observing Quantum Trajectories: From Mott's Problem to Quantum Zeno Effect and Back}
@@ -75,6 +118,8 @@ suppression also accounts for the quantum Zeno effect.
 
 \end{abstract}
 
+\newpage
+
 \section{Introduction}
 
 %Due to uncertainty, the problem of assigning trajectories to quantum particles becomes subtle and controversial. Moreover, this assignment of
@@ -99,7 +144,7 @@ how do we measure it?
 
 Wiseman~\cite{hw03} was one of the first to point out that the weak value of
 the
-%{hw03}   Wiseman, H.M., Directly observing momentum transfer in twin-slit “which-way” experiments, {\em Phys. Letts.}  A {\bf 311} (2003) 285–291
+%{hw03}   Wiseman, H.M., Directly observing momentum transfer in twin-slit √íwhich-way√ì experiments, {\em Phys. Letts.}  A {\bf 311} (2003) 285√ê291
 momentum operator is the local momentum or the Bohm momentum in the Bohm
 approach. (See also Hiley~\cite{bh12} for a wider perspective.)
 %{bh12}  Hiley, B. J., Weak Values:Approach through the Clifford and Moyal Algebras, {\em J. Phys.: Conference Series}, {\bf 361} (2012) 012014.
@@ -1487,7 +1532,7 @@ $f^{\psi}_{tt^{\prime}}$. This approach gives rise to a very different way of
 analysing quantum phenomena from the conventional approaches, including the
 approach of Bohmian mechanics as detailed in D\"{u}rr and Teufel~\cite{ddst09}%
 .
-%{ddst09} Dürr, D. and Teufel, S., {\em Bohmian mechanics}. Springer Berlin Heidelberg, 2009.
+%{ddst09} D¬ürr, D. and Teufel, S., {\em Bohmian mechanics}. Springer Berlin Heidelberg, 2009.
 Our two observations referred to the extensive work of one of us
 (MdG~\cite{ICP}), who has shown in very general terms that causality as
 defined by Chapman--Kolmogorov is retained in the covering space by the
