--- a/1712.06605/1712.06605.tex
+++ b/1712.06605/1712.06605.tex
@@ -1,4 +1,5 @@
-\documentclass{article}
+\documentclass[12pt]{article}
+\usepackage[noBBpl,sc]{mathpazo}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%  Packages to be loaded  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -20,10 +21,44 @@
 %%%%%%%%%%%%%%%%%%%%%%%%  End of packages       %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\addtolength{\textwidth}{0.75 in}
-\addtolength{\oddsidemargin}{-.4in}
-\addtolength{\evensidemargin}{-.4in}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+%\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
  %%%%%%%%%%%%%%%%%% BEGIN: Macros for some shortforms   %%%%%%%%%%%%%%%
 %% Using author defined macro (shortform) for eqn and fig refs in text 
 %%  These SHOULD come BEFORE  the hyperref package if it is loaded
@@ -81,7 +116,7 @@ email: paddy@iucaa.in}
 
 %\date{}
 
-
+\date{31 Jul 2018}
 
 \begin{document}
 
@@ -224,7 +259,7 @@ While the main focus of this paper is on the conceptual issues (and it does clar
 Of course, these technical results are just the trees in the wood of conceptual discussion and, hopefully, the reader will not miss the latter for the former.
 
 
-\section{Quantum theory of a  system with the Hamiltonian $H(\bm{p},\bm{x})=H(|\bm{p}|)$}\label{sec:hofp}
+\section{Quantum theory of a  system with the Hamiltonian \texorpdfstring{$H(\bm{p},\bm{x})=H(|\bm{p}|)$}{$H({p},{x})=H(|{p}|)$}}\label{sec:hofp}
 
 
 The classical dynamics of a free  particle is completely described by the action which has no explicit dependence on the space or time coordinates:
@@ -1768,7 +1803,7 @@ In the case of charged particles, these two will carry equal and opposite charge
 \subsection{Two intriguing results}
 
 The investigations of the path integral leads to some remarkable results, definitely worthy of further study. The first one is the expression for the 
-the Feynman propagator, $G_R(x_2 , x_1 )=\bk{x_2}{e^{−iH|t|}}{x_1}$,  with the appearance of the absolute value of the time difference in the evolution operator. The second one is an intriguing relation between the path integral and the existence of antiparticles. I will now discuss these two results, starting from the second one.
+the Feynman propagator, $G_R(x_2 , x_1 )=\bk{x_2}{e^{-iH|t|}}{x_1}$,  with the appearance of the absolute value of the time difference in the evolution operator. The second one is an intriguing relation between the path integral and the existence of antiparticles. I will now discuss these two results, starting from the second one.
 
 
 The key result I want to highlight is contained in the beautiful --- and not adequately appreciated --- equation, which allows us to describe  relativistic particles as excitations of a Lorentz invariant, causal, quantum field:
