--- a/1712.06605/1712.06605.tex
+++ b/1712.06605/1712.06605.tex
@@ -101,7 +101,6 @@ bookmarksopenlevel=10
 \title{Obtaining the Non-relativistic Quantum Mechanics from Quantum Field Theory: Issues, Folklores and Facts\\
 \vskip 1.1cm
 {\textit{\Large What happens to the anti-particles when you take the non-relativistic limit of QFT?\\
-\vskip 2cm
 }}}
 
 
@@ -122,14 +121,16 @@ email: paddy@iucaa.in}
 
 \maketitle
 
-
+\newpage
 
 \begin{abstract}
  Given the classical dynamics of a non-relativistic particle in terms of a Hamiltonian or an action, it is relatively straightforward to obtain the non-relativistic quantum mechanics (NRQM) of the system. These standard procedures, based on either the Hamiltonian or the path integral, however, do not work in the case of a relativistic particle. As a result we do not have a single particle description of relativistic quantum mechanics (RQM). Instead, the correct approach requires a transmutation of dynamical variables from the position and momentum of a  single particle to a field and its canonical momentum. Particles, \textit{along with antiparticles},  reappear in a very non-trivial manner as the excitations of the field. The fact that one needs to adopt  completely different languages to describe  relativistic and non-relativistic free particle implies that obtaining the NRQM limit of QFT is conceptually non-trivial. I examine this limit in several approaches (like, for e.g., Hamiltonian dynamics, Lagrangian and Hamiltonian path integrals, field theoretic description etc.) and identify the precise issues which arise when one attempts to obtain the NRQM from QFT in each of these approaches. The dichotomy of description between NRQM and QFT  does not originate just  from the square root in the Hamiltonian or from the demand of Lorentz invariance, as it is sometimes claimed. The real difficulty has its origin in the necessary existence of antiparticles to ensure a particular notion of relativistic causality. Because of these conceptual issues, it turns out that one \textit{cannot}, in fact,  obtain  some of the popular descriptions of NRQM by \textit{any} sensible limiting procedure applied to QFT. To obtain NRQM from QFT in a  seamless manner, it is necessary to 
  work with NRQM expressed in a language  closer to that of QFT. This fact has several implications, especially for the operational notion of space coordinates in quantum theory. A close examination of these issues, which arise when quantum theory is combined with  special relativity,  could offer insights in the context of attempts to combine quantum theory with general relativity.  
 \end{abstract}
 
+\newpage
 \tableofcontents
+\newpage
 
 
 
