--- a/1712.06605/1712.06605.tex
+++ b/1712.06605/1712.06605.tex
@@ -544,7 +544,7 @@ The fact that spatial integration with the measure $ d^n \bm{x}$
  is not Lorentz invariant also means that a relation like \eq{complaw} has no hope of surviving in a Lorentz invariant theory if the propagators are Lorentz invariant. The standard procedure to define invariant spatial integration is to use a (variant of the) combination like $d\Sigma^a F_1\partial_a F_2 =  d^n \bm{x} F_1\partial_0 F_2$ for two scalar functions $F_1,F_2$. This, however, does not help us to define a wave function for a relativistic particle. But it again raise the question as to how the correct composition law in \eq{complaw} is recovered in the non-relativistic limit; we will discuss this issue in Sec.\ref{sec:compo}.
  
 Some of these ideas involving the states $\ket{\bm{k}}$ and $\ket{x}$ are usually expressed by introducing a one particle ``wave function''
-which, as we know, is not an useful notion. Nevertheless, to connect up with previous literature, let me briefly mention how this comes about. Consider a state $\ket{\Psi}$ defined in terms of a function $F(\bm{k})$ by
+which, as we know, is not a useful notion. Nevertheless, to connect up with previous literature, let me briefly mention how this comes about. Consider a state $\ket{\Psi}$ defined in terms of a function $F(\bm{k})$ by
  \begin{equation}
  \ket{\Psi} \equiv \int d\Omega_{\bm{k}} F(\bm{k}) \ket{\bm{k}} 
   \label{14oct18}
