--- a/1908.03795/EigenSurvey.tex
+++ b/1908.03795/EigenSurvey.tex
@@ -68,7 +68,7 @@ $$ |v_{i,j}|^2\prod_{k=1;k\neq i}^{n}\left(\lambda_i(A)-\lambda_k(A)\right)=\pro
 We refer to this identity as the \emph{eigenvector-eigenvalue identity}.  Despite the simple nature of this identity and the extremely mature state of development of linear algebra, this identity was not widely known until very recently.  In this survey we describe the many times that this identity, or variants thereof, have been discovered and rediscovered in the literature (with the earliest precursor we know of appearing in 1834).  We also provide a number of proofs and generalizations of the identity.  
 \end{abstract}
 
-\date{\today}
+\date{4 Mar 2020}
 
 \maketitle
 
