--- a/2102.04672/main.tex
+++ b/2102.04672/main.tex
@@ -1,4 +1,4 @@
-\documentclass[conference]{IEEEtran}
+\documentclass[12pt]{article}
 
 %%% LICS SUGGESTED PACKAGES %%%
 %\usepackage{algorithmic}
@@ -7,6 +7,33 @@
 %\usepackage{stfloats}
 %\usepackage{dblfloatfix}
 %\usepackage{url}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
 
 \usepackage{subfiles}
 \usepackage[english]{babel}
@@ -137,20 +164,15 @@
 
 \begin{document}
 \title{Native Type Theory}
-
+\date{9 Feb 2021}
 % \author{
 % \IEEEauthorblockN{Author(s) anonymized} }
 
 \author{
-\IEEEauthorblockN{Christian Williams}
-\IEEEauthorblockA{Department of Mathematics\\
-University of California, Riverside\\
-williams@math.ucr.edu}
+{Christian Williams}
 \and
-\IEEEauthorblockN{Michael Stay}
-\IEEEauthorblockA{Pyrofex Corp.\\
-Lindon, Utah\\
-stay@pyrofex.net}}
+{Michael Stay}}
+
 
 \maketitle
 
