--- a/2005.05340/nature-main.tex
+++ b/2005.05340/nature-main.tex
@@ -9,6 +9,27 @@
 \usepackage{multirow}
 \usepackage{longtable}
 \usepackage{amssymb}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 % gensymb, xcolor added by MFB (Michael Bietenholz) to allow \arcdeg etc and \textcolor markups
 \graphicspath{{./}{figures/}}
 % \usepackage{lineno}
